Modularisation : Tests compilation works Tests compilation works BUT many tests fail
Chore : move all maven "subprojects" into oldproject and add the beginning of sis-build-helper in gradle

Chore : edit on ResouceCompilerTask

Chore : update sis-build-helper with all the classes of the "old" maven plugin
- The gradle sis-build-helper compile successfully pass the test
--> ResourceCompilerTask seems to work (*.properties -> *.utf)
--> The other classes in the internal package are not tested
- Update the TODO file for the gradle migration